[package]
name = "clir-cgif"
description = "Provides the reading and writing of the ISO/IEC Conceptual Graph Interchange Format (CGIF)."
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-clir.git"
license = "MIT"
readme = "README.md"
edition = "2021"
publish = true

[dependencies]
clir-core = { version = "0.1", path = "../clir-core" }
