[package]
name = "clir-clif"
description = "Provides the reading and writing of the ISO/IEC Common Logic Interchange Format (CLIF)"
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-clir.git"
license = "MIT"
readme = "README.md"
edition = "2021"
publish = true

[dependencies]
clir-core = { version = "0.1", path = "../clir-core" }
