[package]
name = "clir-core"
description = "The core representation of ISO/IEC 24707:2018 — Common Logic (CL)"
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-clir.git"
license = "MIT"
readme = "README.md"
edition = "2021"
publish = true


[dependencies]
